# email_subcriber

./: .env  Cargo.toml  configuration.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
